# web_scrapping_kss

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: data.csv  data.html  data_csv.csv
