[project]
name = "kss-webscrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.8.30",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "types-beautifulsoup4>=4.12.0.20241020",
]
